--- a/src/components/common/modal/Overlay/Overlay.scss
+++ b/src/components/common/modal/Overlay/Overlay.scss
@@ -5,5 +5,5 @@
   position: fixed;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: 1;
 }
